v3.7.1-rc.1 (XXXX-XX-XX)
------------------------

* Added missing state rollback for failed attempt-based write locking of spin
  locks.

* Disable internal network protocol switch for cluster-internal communication,
  and hard-code the internal communication protocol to HTTP.

* Added vertex collection validation in case of a SmartGraph edge definition
  update.

* Fix cluster-internal request forwarding for VST requests that do not have any
  Content-Type header set. Such requests could have been caused by the Java
  driver (ES-635).

* Fixed issue OASIS-252: Hotbackup agency locks without clientId.

* Fixed internal-issue #726: added restore handling for custom analyzers.

* Updated arangosync to 0.7.7.

* Fixed a potential agency crash if trace logging is on.

* Network layer now reports connection setup issues in more cases this replaces
  some INTERNAL_ERROR reports by more precise errors, those are only reached
  during failover scenarios.

* Fixed a document parsing bug in the Web UI. This issue occured in the
  document list view in case a document had an attribute called `length`.
  The result was an incorrect representation of the document preview.

* Re-enable access to GET `/_admin/cluster/numberOfServers` for all users by
  default. Requests to PUT `/_admin/cluster/numberOfServers` require admin
  user privileges. This restores the pre-3.7 behavior.
  In contrast to pre-3.7 behavior, the `--server.harden` option now can be
  used to restrict access to GET `/_admin/cluster/numberOfServers` to admin
  users, too. This can be used to lock down this API for non-admin users
  entirely.

* Fixed crash in HTTP2 implementation.

* Improve readability of running and slow queries in web UI by properly left-
  aligning the query strings.

* ClusterInfo will wait for syncer threads to shutdown.

* Correct some log entries.

* Allow changing collection properties for smart edge collections as well.